# keel-verifier

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  PUBLIC_DOCS_POLICY.md  README.md  RELEASING.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml  trust-root-drift.yml
keel_verifier/: __init__.py  __main__.py  _release_manifest.json  cli.py  doctor.py  install_diagnostics.py  monitor.py  permit_co_signature.py  permit_presentation.py  report_render.py  self_check.py  semantics.py  verdicts.py  verifier.py  verifier_output_render.py  work_chain.py
keel_verifier/canonical/: __init__.py  permit_binding.py
keel_verifier/capability/: README.md  v1.json
keel_verifier/data/: report_presentation_v0.json  trust_root.json
keel_verifier/data/claim_registry/: v0.json
keel_verifier/data/claim_registry/historical/: v0-sha256-0b27a8346fac861a8c7298055fc763c0bad0dfcd068af38dd2c620b6a7d610c4.json  v0-sha256-20178d693c18d09bed08c3044e4d74115f49f5993e5718d802513fcb1ed70843.json  v0-sha256-3a50f2a6175ac6417caab3c732b32fbe09bce77bb6a4de8daef097f6862ee8d1.json  v0-sha256-3c9327949bf077c4c447112f78af6f7edb1c2611048da150cf8ad890eed7dbfa.json  v0-sha256-4be808c13849d2737bd0f40da0f522d8a6c4b672c29e3ac2c0b43cdc8e6be5c7.json  v0-sha256-731d8afeb8770cc7a09a0ce1761580c98eb3c01a75e271f727d4992843c197f1.json  v0-sha256-8da29094827fda581ee8fb3a1466934182e572a91b7940d2ef1cb3c28c1ec215.json  v0-sha256-a142fcecf68ffd1ad9ebb03ab8a28accfe727d3f62989272088ce559a7aba1ba.json  (+6 more)
keel_verifier/data/comparator_registry/: v0.json  work-payment-authority-v1.json
keel_verifier/data/schemas/: permit-revoked-event.schema.json
keel_verifier/data/tsa_trust/: tsa_trust_bundle_v1.json
keel_verifier/keys/: keel_checkpoint.pub.json
keel_verifier/schemas/: __init__.py  artifact_ref.py
sample/: export.json  tampered.json  tsa_tampered.json  voice_session_export.json  voice_session_export_v3.json
scripts/: build_scope_faithfulness_verifier_fixtures.py  check_release_trust_root.py  check_tsa_trust_bundle_freshness.py  generate_release_manifest.py  generate_tsa_witness.py  refresh_tsa_trust_bundle.py  selector_audit.py  sign_public_key_manifest.py  sync_permit_to_x_artifacts.py
tests/: conftest.py  scope_faithfulness_public.py  step4_permit_helpers.py  test_artifact_ref_parsing.py  test_authority_chain_v1.py  test_canonical_byte_identity.py  test_canonical_json.py  test_capability_inventory_parity.py  test_checkpoint_monitor.py  test_checkpoint_scope_state_v1.py  test_claim_registry_parity.py  test_cli_auto_detect_self_attesting.py  test_cli_doctor.py  test_cli_render_modes.py  test_cli_self_check.py  test_cross_event_killer_fixture.py  test_doctor.py  test_embedded_manifest_schema.py  test_export_scope_faithfulness_v1.py  test_golden_fixture_corpus.py  test_installed_wheel_semantics.py  test_jcs_drift_lock.py  test_keel_api_emitter_byte_faithfulness.py  test_key_manifest_active_window.py  test_key_status_completeness_v1.py  test_permit_chain_verifier.py  test_permit_co_signature_v1.py  test_permit_decision_v1.py  test_permit_dispatch_absence_after_revocation_v1.py  test_permit_projection.py  test_permit_revoked_v1.py  test_permit_v2_signature_envelope.py  test_quota_reservation_linkage_v1.py  test_rail_settlement_reconciled_v1.py  test_refresh_keys.py  test_registry_version_resolution.py  test_release_manifest_generator.py  test_release_trust_root_gate.py  test_released_artifact_parity.py  test_replay_preserves_binding_version.py  (+29 more)
tests/fixtures/: permit_binding_public_keys.json  permit_decision_binding_golden_vectors_v1_v6.json  substrate_v6_resource_attributes_hash_vectors.json
tests/fixtures/permit_v2_signature_envelope/: corpus.json  generate.py
tests/fixtures/scope_faithfulness_corpus/: corpus.json
tests/fixtures/sigstore/: v2.4.2-manifest.json  v2.4.2-manifest.json.sigstore
tests/fixtures/tsa/: digicert_receipt_for_known_message.der  globalsign_receipt_for_known_message.der  known_message.txt  public_ca_receipts_v1.json
tools/: check_bundled_key.py  make_sample.py  run_golden_corpus.py
(+247 files in other folders)
