[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "keel-verifier"
version = "2.2.0"
description = "Independent verifier for Keel governance evidence"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Keel API, Inc."}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "cryptography>=42",
]

[project.optional-dependencies]
dev = [
    "build",
    "pytest",
    "ruff",
    "setuptools",
    "twine",
    "wheel",
]

[project.scripts]
keel-verify = "keel_verifier.cli:main"

[project.urls]
Homepage = "https://keelapi.com/verify"
Documentation = "https://docs.keelapi.com/11-running-keel-verify"
Repository = "https://github.com/keelapi/keel-verifier"
Changelog = "https://github.com/keelapi/keel-verifier/releases"

[tool.setuptools.packages.find]
where = ["."]
include = ["keel_verifier*"]

[tool.setuptools.package-data]
keel_verifier = [
    "_release_manifest.json",
    "data/*.json",
    "data/**/*.json",
    "keys/*.json",
    "capability/*.json",
    "capability/*.md",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E402"]
